<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="Add Note"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@+id/add_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/note_title"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_title_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_description"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="top|start"
            android:hint="@string/txt_description_hint"
            android:inputType="textMultiLine"
            android:lines="10"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>